docs/sonarqube/sonarqube-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sonarqube
  name: sonarqube
spec:
  host: sonarqube-sonarqube.apps.tssc.rht-set.com
  tls:
    termination: edge
  to:
    kind: Service
    name: sonarqube
    weight: 100
  wildcardPolicy: None
